Day 24: Docker Compose deployment working end-to-end